[gd_scene load_steps=10 format=3 uid="uid://ctdbx6yetdcqw"]

[ext_resource type="Texture2D" uid="uid://cj06cg44868sa" path="res://Assets/bat.png" id="1_pb2o4"]
[ext_resource type="Script" uid="uid://dyx4i7b82nh66" path="res://bat.gd" id="1_tofr1"]
[ext_resource type="PackedScene" uid="uid://cg5xaajlr4coo" path="res://wander.tscn" id="3_vobq3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tofr1"]
atlas = ExtResource("1_pb2o4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vobq3"]
atlas = ExtResource("1_pb2o4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1tubu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tofr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vobq3")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3tecl"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_jp0fn"]
radius = 67.1863

[sub_resource type="CircleShape2D" id="CircleShape2D_vobq3"]
radius = 16.1245

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_tofr1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1tubu")
animation = &"Idle"
frame_progress = 0.964552

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3tecl")
debug_color = Color(2.88785e-07, 0.673505, 0.558503, 0.521569)

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource("CircleShape2D_jp0fn")

[node name="Wander" parent="." instance=ExtResource("3_vobq3")]
group_name = "FirstEnemy"

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("CircleShape2D_vobq3")
debug_color = Color(0.830749, 0.0014264, 0.943656, 0.42)

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
